Update Amazon link to direct URL

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h1>A dystopian sci‑fi book fused with political fiction</h1>
       <p class="muted">Built for well‑educated millennials on both sides of the Atlantic: sharp ideas, fast pacing, and uncomfortable plausibility.</p>
       <div class="cta-row">
-        <a class="btn primary" href="https://www.amazon.com/" target="_blank" rel="noopener">Buy on Amazon</a>
+        <a class="btn primary" href="https://a.co/d/0hfnsUIP" target="_blank" rel="noopener">Buy on Amazon</a>
         <a class="btn success" href="subscribe.html">Join the Authors Club</a>
         <a class="btn" href="reviews.html">Read reviews</a>
       </div>
