Update Google Form link in subscribe.html

--- a/subscribe.html
+++ b/subscribe.html
@@ -36,7 +36,7 @@
   <p>Click the button below. It opens a short Google Form (email only) which writes straight into a Google Sheet.</p>
 
   <div class="cta-row">
-    <a class="btn success" href="https://forms.gle/REPLACE_WITH_YOUR_FORM" target="_blank" rel="noopener">Join via Google Form</a>
+    <a class="btn success" href="https://forms.gle/K721WuexGL93GNs87" target="_blank" rel="noopener">Join via Google Form</a>
     <a class="btn primary" href="https://www.amazon.com/" target="_blank" rel="noopener">Buy on Amazon</a>
   </div>
 
