Updated reviews.html with new Amazon links.

--- a/reviews.html
+++ b/reviews.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reviews</title>
-</head>
-<body>
-    <h1>Book Reviews</h1>
-    <button onclick="window.location.href='https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC'">Buy on Amazon</button>
-    <br>
-    <button onclick="window.location.href='https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC#averageCustomerReviewsAnchor'">Leave an Amazon review</button>
-    <h2>Amazon reader reviews (selected)</h2>
-    <ul>
-        <li><a href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC#averageCustomerReviewsAnchor">View all Amazon reviews</a></li>
-    </ul>
-</body>
-</html>
+<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Reviews</title>\n</head>\n<body>\n    <h1>Book Reviews</h1>\n    <p>Check out the book on Amazon!</p>\n    <a href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC">Buy on Amazon</a>\n    <h2>Leave an Amazon review</h2>\n    <a href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC#averageCustomerReviewsAnchor">Leave an Amazon review</a>\n    <h2>Amazon reader reviews (selected)</h2>\n    <p>See all Amazon reviews <a href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC#averageCustomerReviewsAnchor">here</a>.</p>\n</body>\n</html>
