Change button text and remove tip in reviews.html
Updated the button text for Amazon reviews and removed a tip about quote selection.

--- a/reviews.html
+++ b/reviews.html
@@ -31,7 +31,7 @@
   <p class="muted">Professional reviews + selected Amazon reader reviews. Keep quotes short and attributed.</p>
   <div class="cta-row">
     <a class="btn primary" href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC" target="_blank" rel="noopener">Buy on Amazon</a>
-    <a class="btn" href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC#averageCustomerReviewsAnchor" target="_blank" rel="noopener">Leave an Amazon review</a>
+    <a class="btn" href="https://www.amazon.com/Dont-Feed-Beast-Free-Riders-Triumvirate-ebook/dp/B0CWWWM3NC#averageCustomerReviewsAnchor" target="_blank" rel="noopener">See all Amazon reviews</a>
     <a class="btn success" href="subscribe.html">Join the Club</a>
   </div>
 </section>
@@ -67,9 +67,7 @@
     <div class="by">— Amazon reader (UK) — Dec 2025</div>
   </div>
 
-  <p class="smallprint">
-    Tip: Don’t auto‑scrape Amazon. Manually select a few short quotes (and keep them fresh).
-  </p>
+
 </section>
 
     <div class="footer">
