Update image source for dystopian illustration

--- a/reviews.html
+++ b/reviews.html
@@ -40,7 +40,7 @@
 </div>
 
 <section class="card">
-  <img class="illus" src="assets/img/mood3.png" alt="Dystopian illustration"/>
+  <img class="illus" src="assets/img/BjornEgerkrans_singapore_after_dark_dystopian_lines_of_unemploy_c1f98368-10ad-44c1-9fa7-e11f460c8b5e.png" alt="Dystopian illustration"/>
 
   <h2>Editorial & professional reviews</h2>
 
